--- a/playbooks/tasks/system/packages.yml
+++ b/playbooks/tasks/system/packages.yml
@@ -18,3 +18,15 @@
   ansible.builtin.user:
     name: "{{ ansible_user_id }}"
     shell: /usr/bin/zsh
+
+- name: All - Install aws-vault
+  ansible.builtin.get_url:
+    checksum: sha256:https://github.com/99designs/aws-vault/releases/download/v{{ aws_vault_version }}/SHA256SUMS
+    dest: /usr/local/bin/aws-vault
+    group: root
+    owner: root
+    url: https://github.com/99designs/aws-vault/releases/download/v{{ aws_vault_version }}/aws-vault-linux-amd64
+    mode: "0755"
+  # Arch is the only platform which has a package
+  # It also comes with docs and completions
+  when: ansible_os_family != 'Archlinux'
