all: add yubikey-manager

--- a/playbooks/tasks/system/archlinux/packages.yml
+++ b/playbooks/tasks/system/archlinux/packages.yml
@@ -42,6 +42,7 @@
     - webp-pixbuf-loader  # Allows for viewing of webp images
     - wget
     - xz
+    - yubikey-manager
     - zsh
 
 - name: Archlinux - Install non WSL packages
