--- a/playbooks/tasks/system/debian/debian/packages.yml
+++ b/playbooks/tasks/system/debian/debian/packages.yml
@@ -19,4 +19,6 @@
   loop:
     - kubernetes-client  # kubectl
     - python3-cairo  # required to fix default python
+    # TODO: install yubikey-manager when debian finally updates to a non alpha
+    # - yubikey-manager
     - zoxide  # A faster way to navigate your filesystem
