--- a/playbooks/tasks/system/debian/ubuntu/packages.yml
+++ b/playbooks/tasks/system/debian/ubuntu/packages.yml
@@ -7,6 +7,7 @@
   delay: 5
   loop:
     - podman-docker  # emulate docker
+    - yubikey-manager
 
 - name: Ubuntu >=18 - Install packages
   ansible.builtin.apt:
