centos: does not have ykman

--- a/playbooks/tasks/system/redhat/centos/packages.yml
+++ b/playbooks/tasks/system/redhat/centos/packages.yml
@@ -8,6 +8,8 @@
   loop:
     - dbus-daemon
     - kubectl
+    # TODO: install yubikey-manager when it becomes available
+    # - yubikey-manager
 
 - name: CentOS - Install stream8 packages
   ansible.builtin.dnf:
