--- a/playbooks/tasks/system/redhat/fedora/packages.yml
+++ b/playbooks/tasks/system/redhat/fedora/packages.yml
@@ -3,8 +3,10 @@
   ansible.builtin.dnf:
     name: "{{ item }}"
     state: present
-  retries: 5
+  retries: 3
   delay: 5
+  register: fedora_install_packages
+  until: fedora_install_packages is succeeded
   loop:
     - bat  # rust version of cat
     - community-mysql-devel  # from fedora modular
