--- a/playbooks/tasks/system/redhat/packages.yml
+++ b/playbooks/tasks/system/redhat/packages.yml
@@ -26,8 +26,10 @@
   ansible.builtin.dnf:
     name: "{{ item }}"
     state: present
-  retries: 5
+  retries: 3
   delay: 5
+  register: redhat_install_packages
+  until: redhat_install_packages is succeeded
   loop:
     - 1password
     - 1password-cli
