--- a/playbooks/tasks/user/rust.yml
+++ b/playbooks/tasks/user/rust.yml
@@ -10,8 +10,10 @@
     dest: ${HOME}/Applications/rustup.sh
     mode: '0775'
   when: not file_rustup.stat.exists
-  retries: 5
+  retries: 3
   delay: 5
+  register: download_rustup
+  until: download_rustup is succeeded
 
 - name: All - Setup rustup
   ansible.builtin.command: ${HOME}/Applications/rustup.sh -y -q --no-modify-path
