--- a/playbooks/tasks/system/redhat/fedora/razer.yml
+++ b/playbooks/tasks/system/redhat/fedora/razer.yml
@@ -4,7 +4,7 @@
     state: present
     key: "https://download.opensuse.org/repositories/hardware:/razer/\
           Fedora_{{ ansible_distribution_major_version | int }}/repodata/repomd.xml.key"
-    fingerprint: "{{ signing_keys.razer_fedora[ansible_distribution_major_version].fingerprint }}"
+    fingerprint: "{{ signing_keys.razer_fedora.fingerprint }}"
   register: rpm_key_razer
   ignore_errors: true
 
