--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,9 @@ workflow:
 .test:
   stage: test
   script:
+    # GitLab clones the project as writable by everyone
+    # This breaks checks that are done inside the tools
+    - chmod -R go-w .
     # Container runs as root to support systemd as the init system
     # switch to the test user 'public' to run the scripts like a user would
     - su public --command="./setup.sh"
