--- a/playbooks/tasks/system/archlinux/packages.yml
+++ b/playbooks/tasks/system/archlinux/packages.yml
@@ -33,6 +33,10 @@
     - podman-docker  # emulate docker
     - python-psutil
     - ripgrep
+    # rust provides cargo, cargo-clippy, debuggers, language server, etc.
+    # this is different than RedHat which split those components up
+    - rust
+    - rust-src  # Rust systems programming language - source code
     - shellcheck
     - tk  # windowing toolkit needed for gitk
     - tree
