--- a/playbooks/tasks/user/dotfiles.yml
+++ b/playbooks/tasks/user/dotfiles.yml
@@ -1,13 +1,13 @@
 ---
 - name: All - Check if dotfiles exist
   ansible.builtin.stat:
-    path: ~/Applications/dotfiles
+    path: "{{code_path}}/perobertson/dotfiles"
   register: dotfiles
 
 # use command to stash changes. Module does not support this
 - name: All - Stash dotfile changes  # noqa command-instead-of-module
   ansible.builtin.command:
-    chdir: ~/Applications/dotfiles
+    chdir: "{{code_path}}/perobertson/dotfiles"
     cmd: git stash
   when: dotfiles.stat.isdir is defined and dotfiles.stat.isdir
   register: stashed_changes
@@ -16,17 +16,17 @@
 - name: All - Git update dotfiles
   ansible.builtin.git:
     repo: https://gitlab.com/perobertson/dotfiles.git
-    dest: ~/Applications/dotfiles
+    dest: "{{code_path}}/perobertson/dotfiles"
     version: main
   register: git_dotfiles
 
 # use command to stash changes. Module does not support this
 - name: All - UnStash dotfile changes  # noqa command-instead-of-module
   ansible.builtin.command:
-    chdir: ~/Applications/dotfiles
+    chdir: "{{code_path}}/perobertson/dotfiles"
     cmd: git stash pop
   when: stashed_changes.stdout is defined and stashed_changes.stdout != 'No local changes to save'
 
 - name: All - Install Dotfiles  # noqa no-handler
-  ansible.builtin.command: ~/Applications/dotfiles/install.py
+  ansible.builtin.command: "{{code_path}}/perobertson/dotfiles/install.py"
   when: git_dotfiles is changed
