update the zoom signing key

--- a/playbooks/tasks/system/redhat/repositories.yml
+++ b/playbooks/tasks/system/redhat/repositories.yml
@@ -120,8 +120,8 @@
 - name: RedHat - Import Zoom signing key
   ansible.builtin.rpm_key:
     state: present
-    key: https://zoom.us/linux/download/pubkey
-    fingerprint: 396060CADD8A75220BFCB369B903BF1861A7C71D
+    key: https://zoom.us/linux/download/pubkey?version=5-12-6
+    fingerprint: 59C86188E22ABB19BD5540477B04A1B8DD79B481
   register: rpm_key_zoom
   # Zoom is an optional package and CentOS:stream9 does not like this key
   failed_when: false
