redhat: add dejavu-sans-fonts

--- a/playbooks/tasks/system/redhat/packages.yml
+++ b/playbooks/tasks/system/redhat/packages.yml
@@ -114,6 +114,7 @@
   loop:
     - crudini
     - dconf-editor
+    - dejavu-sans-fonts
     - dkms
     - ffmpeg  # Improves video playback
     - fuse-sshfs
