all: add cmake to install more rust crates

--- a/playbooks/tasks/system/archlinux/packages.yml
+++ b/playbooks/tasks/system/archlinux/packages.yml
@@ -11,6 +11,7 @@
     - aws-vault
     - bash
     - bash-completion
+    - cmake  # Needed for installing some rust crates
     - curl
     - fd
     - ffmpeg  # Improves video playback
