--- a/playbooks/tasks/system/rust.yml
+++ b/playbooks/tasks/system/rust.yml
@@ -1,4 +1,12 @@
+# Debian/Ubuntu provide an outdated rust setup which makes it difficult
 ---
+- name: All - Create /var/lib/cargo
+  become: true
+  ansible.builtin.file:
+    path: /var/lib/cargo
+    state: directory
+    mode: '0775'
+
 - name: All - Check if rustc is installed on the system
   ansible.builtin.stat:
     path: /usr/bin/rustc
@@ -6,23 +14,27 @@
 
 - name: All - Check if rustup exists
   ansible.builtin.stat:
-    path: "{{ cargo_home }}/bin/rustup"
+    path: "/var/lib/cargo/bin/rustup"
   register: file_rustup
 
 # This is a shell script which is used for bootstrapping
 # Future updates use the binary
 - name: All - download rustup.sh
+  become: true
   ansible.builtin.get_url:
     url: https://sh.rustup.rs
-    dest: ${HOME}/.local/bin/rustup.sh
-    mode: '0700'
+    dest: /usr/local/bin/rustup.sh
+    mode: '0775'
   retries: 3
   delay: 5
   register: download_rustup_sh
   until: download_rustup_sh is succeeded
 
 - name: All - Setup rustup
-  ansible.builtin.command: ${HOME}/.local/bin/rustup.sh -y -q --no-modify-path
+  become: true
+  ansible.builtin.command: rustup.sh -y -q --no-modify-path
+  environment:
+    CARGO_HOME: /var/lib/cargo
   when:
     # prefer the system compiler so all packages match
     - not file_rustc.stat.exists
@@ -30,7 +42,11 @@
     - not file_rustup.stat.exists
 
 - name: All - rustup update
-  ansible.builtin.command: rustup update
+  become: true
+  ansible.builtin.command:
+    cmd: /var/lib/cargo/bin/rustup update
+  environment:
+    CARGO_HOME: /var/lib/cargo
   when: file_rustup.stat.exists
   register: rustup_result
   changed_when: "'linux-gnu unchanged - rustc' not in rustup_result.stdout"
