all: install user-updates service for all users

--- a/playbooks/setup.yml
+++ b/playbooks/setup.yml
@@ -91,6 +91,11 @@
       ansible.builtin.import_tasks: tasks/system/rust.yml
       tags: [system, dev, rust]
 
+    - name: Systemd - system
+      ansible.builtin.import_tasks: tasks/system_systemd.yml
+      tags: [system, systemd]
+      become: true
+
     - name: Security Settings
       tags: [system, security]
       become: true
