--- a/playbooks/setup.yml
+++ b/playbooks/setup.yml
@@ -105,25 +105,25 @@
     ### --- Userspace ---
     # Install dotfiles first so CI can detect drift
     - name: User dotfiles
-      ansible.builtin.import_tasks: tasks/user/dotfiles.yml
+      ansible.builtin.import_tasks: tasks/user_dotfiles.yml
       tags: [user, dotfiles]
     - name: User applications
-      ansible.builtin.import_tasks: tasks/user/applications.yml
+      ansible.builtin.import_tasks: tasks/user_applications.yml
       tags: [user, applications]
     - name: User autostart
-      ansible.builtin.import_tasks: tasks/user/autostart.yml
+      ansible.builtin.import_tasks: tasks/user_autostart.yml
       tags: [user, autostart]
     - name: User python
-      ansible.builtin.import_tasks: tasks/user/python.yml
+      ansible.builtin.import_tasks: tasks/user_python.yml
       tags: [user, python]
     - name: User UI
-      ansible.builtin.import_tasks: tasks/user/ui.yml
+      ansible.builtin.import_tasks: tasks/user_ui.yml
       tags: [user, ui]
     - name: User ides
-      ansible.builtin.import_tasks: tasks/user/ides.yml
+      ansible.builtin.import_tasks: tasks/user_ides.yml
       tags: [user, ides]
     - name: User systemd
-      ansible.builtin.import_tasks: tasks/user/systemd.yml
+      ansible.builtin.import_tasks: tasks/user_systemd.yml
       tags: [user, systemd]
       when:
         - stat_run_systemd.stat.exists
