all: name all plays for ansible-lint

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -174,7 +174,7 @@ lint:ansible:
     - job: build:linter
       artifacts: false
   script:
-    - make ansible-lint
+    - go-task ans:lint
     # Also check all other non ansible files
     - yamllint -f parsable .
 
