--- a/playbooks/flatpaks.yml
+++ b/playbooks/flatpaks.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: localhost
+- name: Playbook to install flatpaks
+  hosts: localhost
   vars:
     ansible_connection: local
     ansible_python_interpreter: "{{ ansible_playbook_python }}"
