all: rename system tasks for better schema detection

--- a/playbooks/gcloud.yml
+++ b/playbooks/gcloud.yml
@@ -8,4 +8,4 @@
     - name: GCloud
       tags: [system]
       become: true
-      ansible.builtin.import_tasks: tasks/system/gcloud.yml
+      ansible.builtin.import_tasks: tasks/system_gcloud.yml
