--- a/playbooks/razer.yml
+++ b/playbooks/razer.yml
@@ -11,4 +11,4 @@
     - name: Razer
       tags: [system]
       become: true
-      ansible.builtin.import_tasks: tasks/system/razer.yml
+      ansible.builtin.import_tasks: tasks/system_razer.yml
