--- a/playbooks/kubernetes.yml
+++ b/playbooks/kubernetes.yml
@@ -8,4 +8,4 @@
     - name: Kubernetes
       tags: [system]
       become: true
-      ansible.builtin.import_tasks: tasks/system/kubernetes.yml
+      ansible.builtin.import_tasks: tasks/system_kubernetes.yml
