--- a/playbooks/tasks/system_debian_packages.yml
+++ b/playbooks/tasks/system_debian_packages.yml
@@ -72,9 +72,9 @@
 ### --- Distro specific ---
 
 - name: Debian Packages
-  ansible.builtin.import_tasks: debian/packages.yml
+  ansible.builtin.import_tasks: debian/debian/packages.yml
   when: ansible_distribution == 'Debian'
 
 - name: Ubuntu Packages
-  ansible.builtin.import_tasks: ubuntu/packages.yml
+  ansible.builtin.import_tasks: debian/ubuntu/packages.yml
   when: ansible_distribution == 'Ubuntu'
