all: rename razer files for better schema detection

--- a/playbooks/tasks/system_redhat_razer.yml
+++ b/playbooks/tasks/system_redhat_razer.yml
@@ -2,5 +2,5 @@
 ### --- Distro specific ---
 
 - name: Fedora Razer
-  ansible.builtin.import_tasks: fedora/razer.yml
+  ansible.builtin.import_tasks: system_redhat_fedora_razer.yml
   when: ansible_distribution == 'Fedora'
