--- a/playbooks/tasks/system_razer.yml
+++ b/playbooks/tasks/system_razer.yml
@@ -1,13 +1,13 @@
 ---
 ### --- Family Specific Setup
 - name: Archlinux GCloud
-  ansible.builtin.import_tasks: archlinux/razer.yml
+  ansible.builtin.import_tasks: system_archlinux_razer.yml
   when: ansible_os_family == 'Archlinux'
 
 - name: Debian GCloud
-  ansible.builtin.import_tasks: debian/razer.yml
+  ansible.builtin.import_tasks: system_debian_razer.yml
   when: ansible_os_family == 'Debian'
 
 - name: RedHat GCloud
-  ansible.builtin.import_tasks: redhat/razer.yml
+  ansible.builtin.import_tasks: system_redhat_razer.yml
   when: ansible_os_family == 'RedHat'
