all: rename repository files for better schema detection

--- a/playbooks/tasks/system_redhat_centos_repositories.yml
+++ b/playbooks/tasks/system_redhat_centos_repositories.yml
@@ -14,7 +14,7 @@
     state: present
 
 - name: CentOS - rpm keys for Google
-  ansible.builtin.import_tasks: ../rpm_keys_google.yml
+  ansible.builtin.import_tasks: system_redhat_rpm_keys_google.yml
 
 - name: CentOS - Import kubernetes repository key - 1
   ansible.builtin.rpm_key:
