--- a/playbooks/tasks/system_debian_repositories.yml
+++ b/playbooks/tasks/system_debian_repositories.yml
@@ -51,11 +51,11 @@
 ### --- Distro specific ---
 
 - name: Debian Repositories
-  ansible.builtin.import_tasks: debian/repositories.yml
+  ansible.builtin.import_tasks: system_debian_debian_repositories.yml
   when: ansible_distribution == 'Debian'
 
 - name: Ubuntu Repositories
-  ansible.builtin.import_tasks: ubuntu/repositories.yml
+  ansible.builtin.import_tasks: system_debian_ubuntu_repositories.yml
   when: ansible_distribution == 'Ubuntu'
 
 ### --- Post repo setup steps ---
