--- a/playbooks/tasks/system_redhat_repositories.yml
+++ b/playbooks/tasks/system_redhat_repositories.yml
@@ -157,9 +157,9 @@
 ### --- Distro specific ---
 
 - name: CentOS Repositories
-  ansible.builtin.import_tasks: centos/repositories.yml
+  ansible.builtin.import_tasks: system_redhat_centos_repositories.yml
   when: ansible_distribution == 'CentOS'
 
 - name: Fedora Repositories
-  ansible.builtin.import_tasks: fedora/repositories.yml
+  ansible.builtin.import_tasks: system_redhat_fedora_repositories.yml
   when: ansible_distribution == 'Fedora'
