--- a/playbooks/tasks/system_repositories.yml
+++ b/playbooks/tasks/system_repositories.yml
@@ -1,8 +1,8 @@
 ---
 - name: Debian Repositories
-  ansible.builtin.import_tasks: debian/repositories.yml
+  ansible.builtin.import_tasks: system_debian_repositories.yml
   when: ansible_os_family == 'Debian'
 
 - name: RedHat Repositories
-  ansible.builtin.import_tasks: redhat/repositories.yml
+  ansible.builtin.import_tasks: system_redhat_repositories.yml
   when: ansible_os_family == 'RedHat'
