all: only run user-updates when on a non-metered connection

--- a/playbooks/files/etc/systemd/user/user-updates.service
+++ b/playbooks/files/etc/systemd/user/user-updates.service
@@ -4,6 +4,7 @@ After=default.target
 
 [Service]
 Type=simple
+ExecCondition=non-metered-connection.bash
 ExecStartPre=cargo install --git https://gitlab.com/perobertson/user-updates.git
 Environment=CARGO_INSTALL_ROOT=%h/.local
 ExecStart=%h/.local/bin/user-updates
