all: system is unchanged when cache is regenerated

--- a/playbooks/tasks/system_redhat_centos_repositories.yml
+++ b/playbooks/tasks/system_redhat_centos_repositories.yml
@@ -56,6 +56,7 @@
     or import_kubernetes_repository_key1.changed
     or import_kubernetes_repository_key2.changed
     or import_glcoud_package_key.changed
+  changed_when: false
 
 - name: CentOS - Import RPM-GPG-KEY-rpmfusion-free signing key
   ansible.builtin.rpm_key:
