all: define when dotfile commands change the system

--- a/playbooks/tasks/user_dotfiles.yml
+++ b/playbooks/tasks/user_dotfiles.yml
@@ -52,10 +52,13 @@
   ansible.builtin.command:
     chdir: "{{ code_path }}/gitlab.com/perobertson/dotfiles"
     cmd: git stash pop
+  register: dotfiles_unstash_result
   when:
     - stashed_changes.stdout is defined
     - stashed_changes.stdout != 'No local changes to save'
+  changed_when: dotfiles_unstash_result.rc == 0
 
 - name: All - Install Dotfiles  # noqa no-handler
   ansible.builtin.command: "{{ code_path }}/gitlab.com/perobertson/dotfiles/install.py"
   when: git_dotfiles is changed
+  changed_when: true
